fix the dark mode style issue for active menu

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,15 +1,14 @@
 /* @reference 'tailwindcss' */
+@property --slant {
+	syntax: '<percentage>';
+	inherits: false;
+	initial-value: 55%;
+}
 
 .active-menu {
 	@apply border-black bg-white ring ring-stone-700/50;
 
 	@variant dark {
-		@property --slant {
-			syntax: '<percentage>';
-			inherits: false;
-			initial-value: 55%;
-		}
-
 		transition: --slant 0.2s ease-in-out;
 		/* transition: --slant 0.5s; */
 		border: none;
@@ -35,6 +34,34 @@
 			transition: --slant 1s ease-out;
 			@apply bg-white/30 dark:bg-white/5;
 		}
+	}
+}
+
+.my-glass {
+	transition: --slant 0.2s ease-in-out;
+	/* transition: --slant 0.5s; */
+	border: none;
+	backdrop-filter: blur(var(--glass-blur, 40px));
+	background-color: #0000;
+	background-image:
+		linear-gradient(
+			112deg,
+			oklch(100% 0 0 / var(--glass-opacity, 30%)) 0%,
+			oklch(0% 0 0 / 0%) 100%
+		),
+		linear-gradient(
+			var(--glass-reflect-degree, 10deg),
+			oklch(100% 0 0 / var(--glass-reflect-opacity, 5%)) 25%,
+			oklch(0% 0 0 / 0%) var(--slant)
+		);
+	box-shadow:
+		0 0 0 1px oklch(100% 0 0 / var(--glass-border-opacity, 20%)) inset,
+		0 0 0 2px oklch(0% 0 0 / 5%);
+	text-shadow: 0 1px oklch(0% 0 0 / var(--glass-text-shadow-opacity, 5%));
+	&:hover {
+		--slant: 200%;
+		transition: --slant 1s ease-out;
+		@apply bg-white/30 dark:bg-white/5;
 	}
 }
 
